[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/double_jump_tutorial.gd" type="Script" id=1]
[ext_resource path="res://sprites/keyboard keys/Space-Key.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.9777, 91.2658 )

[node name="Node2D" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.353558 )
shape = SubResource( 1 )

[node name="Press_Space2" type="Sprite" parent="Area2D"]
position = Vector2( 12.0208, -7.97186 )
scale = Vector2( 0.594946, 0.503482 )
texture = ExtResource( 2 )
hframes = 2

[node name="Press_Space" type="Sprite" parent="Area2D"]
position = Vector2( -7.77816, -1.60789 )
scale = Vector2( 0.594946, 0.503482 )
texture = ExtResource( 2 )
hframes = 2
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
